# ImageProcessing

./: .gitignore  CMakeLists.txt
includes/Framework/: AverageColors.h  AverageColorsViewer.h  IMouseTool.h  ImageWindow.h  MagnifiedPixel.h  Magnifier.h  MagnifierViewer.h  MouseSelectionTool.h  Plotter.h  PlotterViewer.h  ProcessedImageScene.h
includes/Tools/: Bicubic.h  BinaryImage.h  Canny.h  ColorHistogram.h  GaussFilter.h  Grayscale.h  GrayscaleHistogram.h  Histogram.h  HistogramEqualizer.h  HistogramViewer.h  Hough.h  IHistogram.h  IImageModifier.h  ImageModifierFactory.h  ImageModifierNames.h  Intermeans.h  InvertColors.h  MirrorImage.h  OtsuBinarization.h  Sobel.h  ValueHistogram.h  ValueInputDialog.h  VectorMedianFilter.h  ZhangSuen.h
src/: CMakeLists.txt
src/Framework/: AverageColors.cpp  AverageColorsViewer.cpp  CMakeLists.txt  ImageWindow.cpp  MagnifiedPixel.cpp  Magnifier.cpp  MagnifierViewer.cpp  MouseSelectionTool.cpp  Plotter.cpp  PlotterViewer.cpp  ProcessedImageScene.cpp
src/Main/: CMakeLists.txt  main.cpp
src/Tools/: Bicubic.cpp  BinaryImage.cpp  CMakeLists.txt  Canny.cpp  ColorHistogram.cpp  GaussFilter.cpp  Grayscale.cpp  GrayscaleHistogram.cpp  Histogram.cpp  HistogramEqualizer.cpp  HistogramViewer.cpp  Hough.cpp  ImageModifierFactory.cpp  Intermeans.cpp  InvertColors.cpp  MirrorImage.cpp  OtsuBinarization.cpp  Sobel.cpp  ValueHistogram.cpp  ValueInputDialog.cpp  VectorMedianFilter.cpp  ZhangSuen.cpp
ui/: GraphWindow.ui  ImageWindow.ui
